--- a/public/listen.html
+++ b/public/listen.html
@@ -9,7 +9,7 @@
   <script src="https://use.fontawesome.com/ee6ae2c63c.js"></script>
   <script src="app.js"></script>
 </head>
-<body ng-controller="RadioController" data-ng-init="init()">
+<body ng-controller="RadioController" data-ng-init="init()" style="text-align:center;">
   <div style="margin: 0 auto;">
     <img src="https://static1.squarespace.com/static/58ce9c24e6f2e19aff8c4bdf/t/59be732dcd39c38fc5737d25/1505653589673/Screen+Shot+2017-09-17+at+8.51.20+AM.png" style="width:75%;">
   </div>
