--- a/public/listen.html
+++ b/public/listen.html
@@ -13,9 +13,15 @@
   <div style="margin: 0 auto;">
     <img src="https://static1.squarespace.com/static/58ce9c24e6f2e19aff8c4bdf/t/59be732dcd39c38fc5737d25/1505653589673/Screen+Shot+2017-09-17+at+8.51.20+AM.png" style="width:75%;">
   </div>
-  <h4>Now playing: {{song}}</h4>
-  <i class="fa fa-play-circle-o fa-3x" onclick="sound.play()"></i>
-  <i class="fa fa-pause-circle-o fa-3x" onclick="sound.stop()"></i>
+  <h4 style="font-family:Arial,Helvetica,sans-serif"><span style="color:#81252A">Now playing:</span> {{song}}</h4>
+  <i class="fa fa-play-circle-o fa-3x"
+     onclick="sound.play()"
+     onMouseOver="this.style.color='#81252A'"
+     onMouseOut="this.style.color='#000'"></i>
+  <i class="fa fa-pause-circle-o fa-3x"
+     onclick="sound.stop()"
+     onMouseOver="this.style.color='#81252A'"
+     onMouseOut="this.style.color='#000'"></i>
   <script>
     var sound = new Howl({
       src: ['http://us3.internet-radio.com:8007/;'],
