--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
 <script language="javascript" type="text/javascript">
 //<!--
 /****************************************************
@@ -22,6 +21,8 @@ win=window.open(mypage,myname,settings);}
 </script>
 </head>
 <body>
- <a href="http://127.0.0.1:3000/" onclick="NewWindow(this.href,'mywin','475','300','no','center');return false" >Listen Live</a>
+ <a href="http://127.0.0.1:3000/" style="text-decoration:none;color:white;font: bold 1.75em Arial,Helvetica,sans-serif;" onclick="NewWindow(this.href,'mywin','475','325','no','center');return false"><div style="background-color:#81252A;width:8em;height:2em;border-radius:5px;text-align:center;padding-top:1em">
+ Listen Live
+ </div></a>
 </body>
 </html>
