change colors and allow auto popup

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+<meta charset="UTF-8">
 <script language="javascript" type="text/javascript">
 //<!--
 /****************************************************
@@ -18,11 +18,12 @@ else if((pos!="center" && pos!="random") || pos==null){LeftPosition=0;TopPositio
 settings='width='+w+',height='+h+',top='+TopPosition+',left='+LeftPosition+',scrollbars='+scroll+',location=no,directories=no,status=no,menubar=no,toolbar=no,resizable=no';
 win=window.open(mypage,myname,settings);}
 // -->
+NewWindow('https://radio-harbor-country.herokuapp.com/','mywin','475','325','no','center');
 </script>
 </head>
 <body>
- <a href="http://127.0.0.1:3000/" style="text-decoration:none;color:white;font: bold 1.75em Arial,Helvetica,sans-serif;" onclick="NewWindow(this.href,'mywin','475','325','no','center');return false"><div style="background-color:#81252A;width:8em;height:2em;border-radius:5px;text-align:center;padding-top:1em">
+<!--  <a href="http://127.0.0.1:3000/" style="text-decoration:none;color:white;font: bold 1.75em Arial,Helvetica,sans-serif;" onclick="NewWindow(this.href,'mywin','475','325','no','center');return false"><div style="background-color:#81252A;width:8em;height:2em;border-radius:5px;text-align:center;padding-top:1em">
  Listen Live
- </div></a>
+ </div></a> -->
 </body>
 </html>
