--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ else if((pos!="center" && pos!="random") || pos==null){LeftPosition=0;TopPositio
 settings='width='+w+',height='+h+',top='+TopPosition+',left='+LeftPosition+',scrollbars='+scroll+',location=no,directories=no,status=no,menubar=no,toolbar=no,resizable=no';
 win=window.open(mypage,myname,settings);}
 // -->
-NewWindow('https://radio-harbor-country.herokuapp.com/','mywin','475','325','no','center');
+// NewWindow('http://127.0.0.1:5000/','mywin','525','400','no','center');
 </script>
 </head>
 <body>
-<!--  <a href="http://127.0.0.1:3000/" style="text-decoration:none;color:white;font: bold 1.75em Arial,Helvetica,sans-serif;" onclick="NewWindow(this.href,'mywin','475','325','no','center');return false"><div style="background-color:#81252A;width:8em;height:2em;border-radius:5px;text-align:center;padding-top:1em">
+ <a href="http://127.0.0.1:5000/" style="text-decoration:none;color:white;font: bold 1.75em Arial,Helvetica,sans-serif;" onclick="NewWindow(this.href,'mywin','475','350','no','center');return false"><div style="background-color:#81252A;width:8em;height:2em;border-radius:5px;text-align:center;padding-top:1em">
  Listen Live
- </div></a> -->
+ </div></a>
 </body>
 </html>
