--- a/public/listen.html
+++ b/public/listen.html
@@ -13,21 +13,21 @@
   <div style="margin: 0 auto;">
     <img src="https://static1.squarespace.com/static/58ce9c24e6f2e19aff8c4bdf/t/59be732dcd39c38fc5737d25/1505653589673/Screen+Shot+2017-09-17+at+8.51.20+AM.png" style="width:75%;">
   </div>
-  <h2 style="font-family:Arial,Helvetica,sans-serif"><span style="color:#B83D37">Now playing:</span> {{song}}</h2>
+  <h3 style="font-family:Arial,Helvetica,sans-serif"><span style="color:#B83D37">Now playing:</span> {{song}}</h3>
   <i class="fa fa-play-circle-o fa-5x"
-     onclick="sound.play()"
+     onclick="sound.mute(false)"
      onMouseOver="this.style.color='#B83D37'"
      onMouseOut="this.style.color='#000'"></i>
   <i class="fa fa-pause-circle-o fa-5x"
-     onclick="sound.stop()"
+     onclick="sound.mute(true)"
      onMouseOver="this.style.color='#B83D37'"
      onMouseOut="this.style.color='#000'"></i>
   <script>
     var sound = new Howl({
       src: ['http://96.31.83.86:8091/;'],
       format: ['mpeg'],
-      html5: true,
       autoplay: true,
+      mobileAutoEnable: true,
       loop: true,
       volume: .8,
     });
