--- a/public/listen.html
+++ b/public/listen.html
@@ -15,10 +15,12 @@
   </div>
   <h3 style="font-family:Arial,Helvetica,sans-serif"><span style="color:#B83D37">Now playing:</span> {{song}}</h3>
   <i class="fa fa-play-circle-o fa-5x"
+     style="margin-right:1em;"
      ng-click="play()"
      onMouseOver="this.style.color='#B83D37'"
      onMouseOut="this.style.color='#000'"></i>
   <i class="fa fa-pause-circle-o fa-5x"
+     style="margin-left:1em;"
      ng-click="pause()"
      onMouseOver="this.style.color='#B83D37'"
      onMouseOut="this.style.color='#000'"></i>
