--- a/public/listen.html
+++ b/public/listen.html
@@ -11,7 +11,7 @@
 </head>
 <body ng-controller="RadioController" data-ng-init="init()" style="text-align:center;">
   <div style="margin: 0 auto;">
-    <img src="https://static1.squarespace.com/static/58ce9c24e6f2e19aff8c4bdf/t/59be732dcd39c38fc5737d25/1505653589673/Screen+Shot+2017-09-17+at+8.51.20+AM.png" style="width:75%;">
+    <img src="RHC_logo.png" style="width:75%;">
   </div>
   <h3 style="font-family:Arial,Helvetica,sans-serif"><span style="color:#B83D37">Now playing:</span> {{song}}</h3>
   <i class="fa fa-play-circle-o fa-5x"
